update github page

--- a/blog-posts/week1_cultural.html
+++ b/blog-posts/week1_cultural.html
@@ -13,7 +13,7 @@
 <body name="top">
 	<div class="off-canvas-wrap" data-offcanvas>
 		<div class="inner-wrap">
-				<nav class="tab-bar">
+			<nav class="tab-bar">
 				<section class="left-small">
 					<a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 				</section>
@@ -21,7 +21,6 @@
 					<h6>Korn's Tech Blog</h6>
 				</section>
 			</nav>
-
 			<aside class="left-off-canvas-menu">
 				<ul class="off-canvas-list">
 					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
@@ -42,16 +41,19 @@
 					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
-
 				</ul>
 			</aside>
 			<section id="container" class="main-section">
+				<div class="row">
+		<div class="large-12 columns">
+		</div>
+				<h2 id="atitle">My Take on The DBC Experience: You Are in Charge of Your Education!</h2>
+		</div>
 					<div class="row">
 
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2 id="atitle">My Take on The DBC Experience: You Are in Charge of Your Education!</h2>
-				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
+				<h6 id="info">Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
 				<p><B>"You are in charge of your education!"</B> I think that pretty much sum up my take on the DBC experience.</p>
 				<p>Personally, I love this kind of culture and very much would love to be in one all the time.</p>
 				<p>I myself has always feel I am responsible for my own life and thus also responsible for my own growth and education. I think part of growing up is to unlearn the child in oneself that only wants to play and do only what is told and no more: the lack of enthusiasm for growth. And with the education system only tell us what to do and rarely teach us the why-to-do, we are ingrained to become that child who is sick and has enough of education.</p>
@@ -64,10 +66,13 @@
 	<aside class="large-3 columns">
 		<div class="panel">
 		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
-			<a href="#"></a>
+			<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+			<hr>
+			<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
+			<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
+			<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
 		</div>
-		<h5>Reference</h5>
+		<h5></h5>
 		<ul class="side-nav">
 <!-- 			<li><a href="http://stackoverflow.com/questions/9189810/css-display-inline-vs-inline-block">Stackoverflow: css-display-inline-vs-inline-block</a></li>
 			<li><a href="http://dustwell.com/div-span-inline-block.html">div-span-inline-block</a></li>
@@ -83,10 +88,10 @@
 	<div class="large-12 columns">
 		<hr/>
 		<div class="row">
-			<div class="large-6 columns">
+			<div class="large-9 columns">
 				<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
 			</div>
-			<div class="large-6 columns">
+			<div class="large-3 columns">
 				<ul class="inline-list right">
 					<li><a href="#top">To Top</a></li>
 <!-- 					<li><a href="#">Link 2</a></li>
