--- a/blog-posts/week1_technical.html
+++ b/blog-posts/week1_technical.html
@@ -46,17 +46,21 @@
 				</ul>
 			</aside>
 			<section id="container" class="main-section">
+			<div class="row">
+		<div class="large-12 columns">
+		</div>
+				<h2 id="atitle">Facebook.com <=> Google.com <=> Youtube.com</h2>
+		</div>
 					<div class="row">
 
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2 id="atitle">Facebook.com <=> Google.com <=> Youtube.com</h2>
-				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 16, 2014.</h6>
+				<h6 id="info">Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 16, 2014.</h6>
 				<img src="Facebook-Youtube-Google.jpg">
 				<p>I think by far my favorite sites are facebook.com, youtube.com, and google.com. (The popular choices I presume.) The main reason why they are my favorite is because they are the ones I considered most useful and I actually use them most in my daily life. In this blog post, I would analyze these favorite websites of mine to dig a little deeper into why they are my favorite! So let's start looking the first one: facebook.com!
 				</p>
 				<hr/>
-				<h4><a href="facebook.com">Facebook.com</a></h4>
+				<h4>Facebook.com</h4>
 				<div class="row">
 					<div class="large-6 columns">
 						<h5><b>First description that comes to mind...</b></h5>
@@ -82,7 +86,7 @@
 
 				<p>I am very new to the web developing world. But with the amount of data facebook has to handle plus the gigantic number of users plus what facebook can do in terms of its functionalities, I feel facebook has to be very complex and very well organized to serve every user.</p>
 				<hr/>
-				<h4><a href="google.com">Google.com</a></h4>
+				<h4>Google.com</h4>
 				<div class="row">
 					<div class="large-6 columns">
 						<p>Google--again--another neccesity. "Google it! Google it!" people often say. In today's world, where information is scatter through out the internet. Google offers one the power to quickly access the right information. Google is my favorite website because of the similar criteria as facebook, it's useful and I use them all the time. (I guess you are seeing a pattern here.) Yes, I am not particularly a design person. I am a pratical man! and what works for me is beautiful!</p>
@@ -103,7 +107,7 @@
 				<p>What is the algorithm for finding a needle in the haystack? Yes, I think that's very much like google's algorithm for searching something on the internet. However, google probably does in less than a second. How? I don't know. </p>
 
 				<hr/>
-				<h4><a href="youtube.com">Youtube.com</a></h4>
+				<h4>Youtube.com</h4>
 				<div class="row">
 					<div class="large-6 columns">
 						<p>Youtube, if I am not wrong, is also run by Google. It is my favorite website #3 because it is a lot of things: a source of entertainment, a source of knowledge, and a place to learn and share something new. Recently, I just learned how to play so song on a piano called <a href="http://www.youtube.com/watch?v=S-Xm7s9eGxU">"Gymnopedia No.1"</a> on Youtube! I didn't need to hired a piano teacher or attend a piano school! Wonderful!</p>
@@ -135,16 +139,20 @@
 	<aside class="large-3 columns">
 		<div class="panel">
 		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
-			<a href="#"></a>
+			<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+			<hr>
+			<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
+			<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
+			<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
 		</div>
-		<h5>Reference</h5>
+		<div id="ref">
+		<h4>Reference</h4>
 		<ul class="side-nav">
 			<li><a href="facebook.com">Facebook</a></li>
-					<li><a href="google.com">Google</a></li>
-					<li><a href="youtube.com">youtube.com</a></li>
+			<li><a href="google.com">Google</a></li>
+			<li><a href="youtube.com">youtube.com</a></li>
 		</ul>
-
+		</div>
 	</aside>
 
 </div>
