--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -51,7 +51,7 @@
 		<div class="large-9 columns" role="content">
 			<article>
 				<h2 id="atitle">CSS Syntax: Display: Inline VS. Display Inline-Block</h2>
-				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 25th, 2014</h6>
+				<h6 id="info">Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 25th, 2014</h6>
 
 				<p>Positioning blocks of HTML using CSS can be difficult when you are new! Fear not! In this article, let's learn about one of the most essential CSS syntax called "display." This syntax accepts many arguments, however, we will touch upon two of them which are display: inline; and display: inline-block;. What do they do? and how are they different? And how and when do we use them? These will be answered! So let's begin by looking what is the display syntax.</p>
 <h3>CSS: Display Syntax</h3>
@@ -126,16 +126,20 @@ An inline-block element is placed as an inline element (on the same line as adja
 	<aside class="large-3 columns">
 		<div class="panel">
 		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
-			<a href="#"></a>
+			<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+			<hr>
+			<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
+			<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
+			<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
 		</div>
-		<h5>Reference</h5>
+		<div id="ref">
+		<h4>Reference</h4>
 		<ul class="side-nav">
 			<li><a href="http://stackoverflow.com/questions/9189810/css-display-inline-vs-inline-block">Stackoverflow: css-display-inline-vs-inline-block</a></li>
 			<li><a href="http://dustwell.com/div-span-inline-block.html">div-span-inline-block</a></li>
 			<li><a href="http://www.w3schools.com/cssref/pr_class_display.asp">W3School	</a></li>
 		</ul>
-
+		</div>
 	</aside>
 
 </div>
