--- a/blog-posts/week3_cultural.html
+++ b/blog-posts/week3_cultural.html
@@ -53,7 +53,7 @@
 		<div class ="row">
 		<div class="large-9 columns" role="content">
 			<article>
-				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 2nd, 2014</h6>
+				<h6 id="info">Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 2nd, 2014</h6>
 				<div id="imgwrap">
 				<img src="img/gregorc.jpg">
 				<figcaption style="font-size: .7em; text-align:center;">http://www.openchurch.co.uk/images/gregorc.jpg</figcaption>
@@ -80,14 +80,18 @@
 	<aside class="large-3 columns">
 		<div class="panel">
 		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
-			<a href="#"></a>
+			<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+			<hr>
+			<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
+			<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
+			<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
 		</div>
-		<h5>Reference</h5>
+		<div id="ref">
+		<h4>Reference</h4>
 		<ul class="side-nav">
 			<li><a href="http://www.thelearningweb.net/personalthink.html">Gregorc Thinking Style</a></li>
 		</ul>
-
+		</div>
 	</aside>
 
 </div>
