--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -45,68 +45,76 @@
 				</ul>
 			</aside>
 			<section id="container" class="main-section">
-					<div class="row">
+				<div class="row">
+					<div class="large-12 columns">
+					</div>
+					<h2 id="atitle">Why Javascript?</h2>
+				</div>
+				<div class="row">
 
-		<div class="large-9 columns" role="content">
-			<article>
-				<h2 id="atitle">Why Javascript?</h2>
-				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 1st, 2014</h6>
-				<img src="img/js.png">
-				<p>
-					Why Javascript? Do we need Javascript in our web page? And what can it do? If I already know HTML and CSS--or the basic building blocks from a website--but you never used Javascript, do I really need Javascript? In this article I will help you tackle this questions to tell you the importance of Javascript in web development.
-				</p><br>
-				<p>
-					First of all, if you are completely new to web development then let's start off by understanding HTML and CSS. If one could compare web development to drawing, then HTML would be the pen which structures and outlines the picture. While CSS is the color. After HTML has put everything layed out CSS puts color into the pieces of the picture. 
-				</p><br>
-				<p>
-					Now, with HTML and CSS, you could produce a slide show of different static pictures one after another or one linking to the another. However, that's about it. If you want your website to interact like facebook, you can't. And this is where programming language like Javascript comes in.
-				</p><br>
-				<p>
-					Javascript is a programming language. And by integrating programming language into HTML and CSS what you get is an interactive and dynamic website. (like a interative picture? a iPad? haha) By simply integrating a programming like Javascript into a website, it almost give a sense that your website is actually a living thing--it's alive!--since now it could interactive with a user and it produces different output depending your input. This, I would say, is the major reason why Javascript is important for web developer.
-				</p><br>
-				<p>
-					On a more specific note, according to my research, Javascript is could manage client-side programming by giving the user immediate feedback instead of going back and forth between the client and the server. As a result, Javascript could greatly decreases the traffic time and increases performance for your website! 
-				</p><br>
+					<div class="large-9 columns" role="content">
+						<article>
+							<h6 id="info">Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 1st, 2014</h6>
+							<img src="img/js.png">
+							<p>
+								Why Javascript? Do we need Javascript in our web page? And what can it do? If I already know HTML and CSS--or the basic building blocks from a website--but you never used Javascript, do I really need Javascript? In this article I will help you tackle this questions to tell you the importance of Javascript in web development.
+							</p><br>
+							<p>
+								First of all, if you are completely new to web development then let's start off by understanding HTML and CSS. If one could compare web development to drawing, then HTML would be the pen which structures and outlines the picture. While CSS is the color. After HTML has put everything layed out CSS puts color into the pieces of the picture. 
+							</p><br>
+							<p>
+								Now, with HTML and CSS, you could produce a slide show of different static pictures one after another or one linking to the another. However, that's about it. If you want your website to interact like facebook, you can't. And this is where programming language like Javascript comes in.
+							</p><br>
+							<p>
+								Javascript is a programming language. And by integrating programming language into HTML and CSS what you get is an interactive and dynamic website. (like a interative picture? a iPad? haha) By simply integrating a programming like Javascript into a website, it almost give a sense that your website is actually a living thing--it's alive!--since now it could interactive with a user and it produces different output depending your input. This, I would say, is the major reason why Javascript is important for web developer.
+							</p><br>
+							<p>
+								On a more specific note, according to my research, Javascript is could manage client-side programming by giving the user immediate feedback instead of going back and forth between the client and the server. As a result, Javascript could greatly decreases the traffic time and increases performance for your website! 
+							</p><br>
 
-				<p>
-					Even though I am pretty new to Javascript, I am already starting to like it! It's fun to make your website interactive with the user. And it's fun to make your website do things for you. I would highly recommend anyone new who wanted to try integrating Javascript into their HTML and CSS with <a href="http://www.codecademy.com/courses/html-javascript-css/">this course</a> on CodeAcademy.
-				</p><br>
-				<p>
-					Thanks for reading!
-				</p>
-		</article>
-	</div>
-
-
-	<aside class="large-3 columns">
-		<div class="panel">
-		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
-			<a href="#"></a>
-		</div>
-		<h5>Reference</h5>
-		<ul class="side-nav">
-			<li><a href="http://javascript.about.com/od/hintsandtips/a/whyjavascript.htm">Why Javascript</a></li>
-			<li><a href="https://answers.yahoo.com/question/index?qid=20111205072750AAQCHSk">Why do we need Javascript?</a></li>
-			<li><a href="http://en.wikipedia.org/wiki/JavaScript">Wikipedia: Javascript</a></li>
-			<li><a href="http://www.codecademy.com/courses/html-javascript-css/">CodeAcademy: Javascript, HTML, and CSS.</a></li>
-		</ul>
-
-	</aside>
-
-</div>
+							<p>
+								Even though I am pretty new to Javascript, I am already starting to like it! It's fun to make your website interactive with the user. And it's fun to make your website do things for you. I would highly recommend anyone new who wanted to try integrating Javascript into their HTML and CSS with <a href="http://www.codecademy.com/courses/html-javascript-css/">this course</a> on CodeAcademy.
+							</p><br>
+							<p>
+								Thanks for reading!
+							</p>
+						</article>
+					</div>
 
 
-<footer class="row">
-	<div class="large-12 columns">
-		<hr/>
-		<div class="row">
-			<div class="large-6 columns">
-				<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
-			</div>
-			<div class="large-6 columns">
-				<ul class="inline-list right">
-					<li><a href="#top">To Top</a></li>
+					<aside class="large-3 columns">
+						<div class="panel">
+							<img id="me" src="../unit1_projects/images/logo.jpg">
+							<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+							<hr>
+							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
+							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
+							<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
+						</div>
+						<div id="ref">
+							<h4>Reference</h4>
+							<ul class="side-nav">
+								<li><a href="http://javascript.about.com/od/hintsandtips/a/whyjavascript.htm">Why Javascript</a></li>
+								<li><a href="https://answers.yahoo.com/question/index?qid=20111205072750AAQCHSk">Why do we need Javascript?</a></li>
+								<li><a href="http://en.wikipedia.org/wiki/JavaScript">Wikipedia: Javascript</a></li>
+								<li><a href="http://www.codecademy.com/courses/html-javascript-css/">CodeAcademy: Javascript, HTML, and CSS.</a></li>
+							</ul>
+						</div>
+					</aside>
+
+				</div>
+
+
+				<footer class="row">
+					<div class="large-12 columns">
+						<hr/>
+						<div class="row">
+							<div class="large-6 columns">
+								<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
+							</div>
+							<div class="large-6 columns">
+								<ul class="inline-list right">
+									<li><a href="#top">To Top</a></li>
 <!-- 					<li><a href="#">Link 2</a></li>
 					<li><a href="#">Link 3</a></li>
 					<li><a href="#">Link 4</a></li> -->
@@ -115,12 +123,12 @@
 		</div>
 	</div>
 </footer>
-					</section> <!-- container -->
-					<a class="exit-off-canvas"></a>
-				</div> 
-				<script src="../fo.js"></script>
-				<script>
-					$(document).foundation();
-				</script>
-			</body>
-			</html>
+</section> <!-- container -->
+<a class="exit-off-canvas"></a>
+</div> 
+<script src="../fo.js"></script>
+<script>
+	$(document).foundation();
+</script>
+</body>
+</html>
