--- a/blog-posts/week4_cultural.html
+++ b/blog-posts/week4_cultural.html
@@ -45,41 +45,50 @@
 				</ul>
 			</aside>
 			<section id="container" class="main-section">
-					<div class="row">
+				<div class="row">
+					<div class="large-12 columns">
+					</div>
+					<h2 id="atitle">Privacy is Dead on the Internet</h2>
+				</div>
+				<div class="row">
 
-		<div class="large-9 columns" role="content">
-			<article>
-				<h2 id="atitle">Privacy is Dead on the Internet</h2>
-				<h6 id="info">Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 7th, 2014</h6>
-				<img src="img/privacy.jpg">
-				<figcaption style="font-size: .7em; text-align:center;">http://kaitleencrowe.com/</figcaption>
-				<p>
-					Privacy is dead in this age of information. It's a shame. Big companies see their users as commodities where their private information could be extracted, bought, and sold as if people are things. Each person is reduced down and seen only by the possible value of money each could be exploited. In--what many of us would like to call--the height of human civilization, is this the depth of how people see one another? And is this how you would look at your mother? It saddens me.
-				</p>
-				<p>
-					A few weeks back I was looking for a price of a bag online for one of my friend who wanted it. I simply typed in Google the name of the bag. Went to its website and checked the price and a few other bags. I woke up the next day. Check my Facebook. And what do I see? Of course, the advertisement of this bag on Facebook which I didn't even want. Great, so now they know everything that I do on the internet. I bet if these big companies could extract what I do in the toilet they would already have. 
-				</p>
-				<p>
-					In the foreseeable future, it seems this problem will only worsen as long as people's value remains the same. If the value of money is worth more than the value of others. Then forget it. The world will never change. 
-				</p>
-				<p>
-					What I ask here is very simple: Do to others as you would have them do to you. Bring back a little humanity into this money driven society and feel what it's like to live for what is right for all rather to live for what is right for you or your group of people. I can guarantee you by my life. If everyone could live each and every day for others everyone's will live worth while life. Just like how Leonardo da Vinc once said, "As a well-spent day brings happy sleep, so a life well spent brings happy death." 
-				</p>
-				<p>
-					For once, let's make this life worth while and make this world a better place!
-				</p>
-		</article>
-	</div>
+					<div class="large-9 columns" role="content">
+						<article>
+							<h6 id="info">Written by <a href="https://www.facebook.com/kornslife?ref=hl">Supakorn Laohasongkram</a> on August 7th, 2014</h6>
+							<div id="imgwrap">
+								<img src="img/privacy.jpg">
+							</div>
+							<figcaption style="font-size: .7em; text-align:center;">http://kaitleencrowe.com/</figcaption>
+							<p>
+								Privacy is dead in this age of information. It's a shame. Big companies see their users as commodities where their private information could be extracted, bought, and sold as if people are things. Each person is reduced down and seen only by the possible value of money each could be exploited. In--what many of us would like to call--the height of human civilization, is this the depth of how people see one another? And is this how you would look at your mother? It saddens me.
+							</p>
+							<p>
+								A few weeks back I was looking for a price of a bag online for one of my friend who wanted it. I simply typed in Google the name of the bag. Went to its website and checked the price and a few other bags. I woke up the next day. Check my Facebook. And what do I see? Of course, the advertisement of this bag on Facebook which I didn't even want. Great, so now they know everything that I do on the internet. I bet if these big companies could extract what I do in the toilet they would already have. 
+							</p>
+							<p>
+								In the foreseeable future, it seems this problem will only worsen as long as people's value remains the same. If the value of money is worth more than the value of others; then forget it. The world will never change. 
+							</p>
+							<p>
+								What I ask here is very simple: <span class="redcolor">Do to others as you would have them do to you. </span>Bring back a little humanity into this money driven society and feel what it's like to live for what is right for all rather to live for what is right for you or your group of people. I can guarantee you by my life. If everyone could live each and every day for others everyone's will live worth while life. Just like how Leonardo da Vinc once said, "As a well-spent day brings happy sleep, so a life well spent brings happy death." 
+							</p>
+							<p>
+								For once, let's make this life worth while and make this world a better place!
+							</p>
+						</article>
+					</div>
 
 
-	<aside class="large-3 columns">
-		<div class="panel">
-		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
-			<a href="#"></a>
-		</div>
-		<h5>Reference</h5>
-		<ul class="side-nav">
+					<aside class="large-3 medium-6 columns">
+						<div class="panel">
+							<img id="me" src="../unit1_projects/images/logo.jpg">
+							<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+							<hr>
+							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
+							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
+							<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
+						</div>
+						<h5></h5>
+						<ul class="side-nav">
 <!-- 			<li><a href="http://stackoverflow.com/questions/9189810/css-display-inline-vs-inline-block">Stackoverflow: css-display-inline-vs-inline-block</a></li>
 			<li><a href="http://dustwell.com/div-span-inline-block.html">div-span-inline-block</a></li>
 			<li><a href="http://www.w3schools.com/cssref/pr_class_display.asp">W3School	</a></li> -->
@@ -89,10 +98,9 @@
 
 </div>
 
-
 <footer class="row">
+	<hr>
 	<div class="large-12 columns">
-		<hr/>
 		<div class="row">
 			<div class="large-9 columns">
 				<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
@@ -108,12 +116,12 @@
 		</div>
 	</div>
 </footer>
-					</section> <!-- container -->
-					<a class="exit-off-canvas"></a>
-				</div> 
-				<script src="../fo.js"></script>
-				<script>
-					$(document).foundation();
-				</script>
-			</body>
-			</html>
+</section> <!-- container -->
+<a class="exit-off-canvas"></a>
+</div> 
+<script src="../fo.js"></script>
+<script>
+	$(document).foundation();
+</script>
+</body>
+</html>
