--- a/blog-posts/week4_cultural.html
+++ b/blog-posts/week4_cultural.html
@@ -69,7 +69,7 @@
 								In the foreseeable future, it seems this problem will only worsen as long as people's value remains the same. If the value of money is worth more than the value of others; then forget it. The world will never change. 
 							</p>
 							<p>
-								What I ask here is very simple: <span class="redcolor">Do to others as you would have them do to you. </span>Bring back a little humanity into this money driven society and feel what it's like to live for what is right for all rather to live for what is right for you or your group of people. I can guarantee you by my life. If everyone could live each and every day for others everyone's will live worth while life. Just like how Leonardo da Vinc once said, "As a well-spent day brings happy sleep, so a life well spent brings happy death." 
+								What I ask here is very simple: <span class="redcolor">Do to others as you would have them do to you. </span>Bring back a little humanity into this money driven society and feel what it's like to live for what is right for all rather to live for what is right for you or your group of people. I can guarantee you by my life. If everyone could live each and every day for others, life for everyone will be worth living. Just like how Leonardo da Vinc once said, "As a well-spent day brings happy sleep, so a life well spent brings happy death." 
 							</p>
 							<p>
 								For once, let's make this life worth while and make this world a better place!
@@ -78,7 +78,7 @@
 					</div>
 
 
-					<aside class="large-3 medium-6 columns">
+					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
 							<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
