--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -106,7 +106,10 @@ p array # => [10, 550, 660, 7000, -30, 0]
 </pre></blockquote>
 
 							<p>
-								In conclusion, Enumerable in Ruby is a class which could be enumerated. And if you visit the Ruby Doc page you will see a wide variety of methods that Ruby provides for this class. And don't forget the Enumerable is a class which could 
+								As the last reminder, Enumerable in Ruby is a class which one could go through one after the other. And Ruby has offer us a wide variety of methods to manipulate these Enumerable classes. And don't forget the Enumerable methods are not only used for array! they can also be used for hash as well! I hope this article help you better understand this concept in some ways!
+							</p>
+							<p>
+								Thanks for reading!
 							</p>
 						</article>
 					</div>
