--- a/blog-posts/week4_cultural.html
+++ b/blog-posts/week4_cultural.html
@@ -57,8 +57,9 @@
 							<h6 id="info">Written by <a href="https://www.facebook.com/kornslife?ref=hl">Supakorn Laohasongkram</a> on August 7th, 2014</h6>
 							<div id="imgwrap">
 								<img src="img/privacy.jpg">
+															<figcaption style="font-size: .7em; text-align:center;">http://kaitleencrowe.com/</figcaption>
+
 							</div>
-							<figcaption style="font-size: .7em; text-align:center;">http://kaitleencrowe.com/</figcaption>
 							<p>
 								Privacy is dead in this age of information. It's a shame. Big companies see their users as commodities where their private information could be extracted, bought, and sold as if people are things. Each person is reduced down and seen only by the possible value of money each could be exploited. In--what many of us would like to call--the height of human civilization, is this the depth of how people see one another? And is this how you would look at your mother? It saddens me.
 							</p>
@@ -81,7 +82,7 @@
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
+							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow and like me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
