--- a/blog-posts/week1_cultural.html
+++ b/blog-posts/week1_cultural.html
@@ -47,7 +47,7 @@
 				<div class="row">
 		<div class="large-12 columns">
 		</div>
-				<h2 id="atitle">My Take on The DBC Experience: You Are in Charge of Your Education!</h2>
+				<h2 id="atitle">You Are in Charge of Your Education!</h2>
 		</div>
 					<div class="row">
 
@@ -66,8 +66,7 @@
 	<aside class="large-3 columns">
 		<div class="panel">
 		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p>Hi, I am Korn, a beginner web developer and designer! Follow and like me from the icons below</p>
-			<hr>
+							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow and like me from the icons below</p>			<hr>
 			<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 			<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
 			<a href="https://github.com/klaoha06"><i class="icon-github-circled"></i> </a><hr>
