update blog week 6

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<li><a href="blog-posts/week3_cultural.html">Know Thy Thinking Style</a></li>
 					<li><a href="blog-posts/week4_technical.html">What is Enumerable in Ruby?</a></li>
 					<li><a href="blog-posts/week4_cultural.html">Privacy is Dead</a></li>
+					<li><a href="blog-posts/week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
