--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 					<li><a href="blog-posts/week4_technical.html">What is Enumerable in Ruby?</a></li>
 					<li><a href="blog-posts/week4_cultural.html">Privacy is Dead</a></li>
 					<li><a href="blog-posts/week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
+					<li><a href="blog-posts/week5_technical.html">Class in Ruby, Simplified</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
