--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</section> <!-- container -->
 					<a class="exit-off-canvas"></a>
 				</div> 
-				<script src="fo.js"></script>
+				<script src="blog-posts/js/fo.js"></script>
 				<script>
 					$(document).foundation();
 				</script>
