--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -165,7 +165,7 @@ An inline-block element is placed as an inline element (on the same line as adja
 					</section> <!-- container -->
 					<a class="exit-off-canvas"></a>
 				</div> 
-				<script src="../fo.js"></script>
+<script src="js/fo.js"></script>
 				<script>
 					$(document).foundation();
 				</script>
