--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -125,7 +125,7 @@
 </section> <!-- container -->
 <a class="exit-off-canvas"></a>
 </div> 
-<script src="../fo.js"></script>
+<script src="js/fo.js"></script>
 <script>
 	$(document).foundation();
 </script>
