--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -160,7 +160,7 @@ p array # => [10, 550, 660, 7000, -30, 0]
 </section> <!-- container -->
 <a class="exit-off-canvas"></a>
 </div> 
-<script src="../fo.js"></script>
+<script src="js/fo.js"></script>
 <script>
 	$(document).foundation();
 </script>
