--- a/blog-posts/week5_cultural.html
+++ b/blog-posts/week5_cultural.html
@@ -127,7 +127,7 @@
 </section> <!-- container -->
 <a class="exit-off-canvas"></a>
 </div> 
-<script src="../fo.js"></script>
+<script src="js/fo.js"></script>
 <script>
 	$(document).foundation();
 </script>
