--- a/blog-posts/week5_technical.html
+++ b/blog-posts/week5_technical.html
@@ -109,7 +109,7 @@
 							<p>
 								Now that we learn a little bit about Class in Ruby. There are some important points which should be further mention.
 							</p>
-							<li>method(s) which are defined within a class are called instance methods. By default, they can be used only for that particular can unless defined as 'global'</li><br>
+							<li>method(s) which are defined within a class are called instance methods. By default, they can be used only for that particular class unless defined as 'global'</li><br>
 							<li>Instance variables also could be use only within the scope of the class which it is defined inside and no further. Instance variable could easily be written or identified by the "@" sign in front of the name of the variable like so: "@name = name".
 							</li><br>
 							<h4>Conclusion</h4>
