--- a/blog-posts/week4_cultural.html
+++ b/blog-posts/week4_cultural.html
@@ -40,6 +40,8 @@
 					<li><a href="week3_cultural.html">Know Thy Thinking Style</a></li>
 					<li><a href="week4_technical.html">What is Enumerable in Ruby?</a></li>
 					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
+					<li><a href="week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
+					<li><a href="week5_technical.html">Class in Ruby, Simplified</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
