--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -42,7 +42,7 @@
 					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
 					<li><a href="week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
 					<li><a href="week6_technical.html">Variables Scope in Ruby</a></li>
-					<li><a href="week6_cultural.html">Stereotype Threat!</a></li>
+					<li><a href="week6_cultural.html">Stereotype Threat, Not!</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
@@ -51,7 +51,7 @@
 				<div class="row">
 					<div class="large-12 columns">
 					</div>
-					<h2 id="atitle">Don't Be Afraid of Feedback, Welcome It!</h2>
+					<h2 id="atitle">Stereotype Threat, Not!</h2>
 				</div>
 				<div class="row">
 
@@ -59,31 +59,41 @@
 						<article>
 							<h6 id="info">Written by <a href="https://www.facebook.com/kornslife?ref=hl">Supakorn Laohasongkram</a> on August 13th, 2014</h6>
 							<p>
-							Prior to reading the feedbacks for this assignment, my mind start getting scare of whether or not someone will say anything bad about me. This is a mental attitude of fearing criticism. And it is very dangerous and will consume your education if you give in to it. 
+								Stereotype Threat! What is Stereotype threat? According to Claude M. Steele, he roughly defines it as a negative feeling one could recieve simply from being associated to a cult or a social identity.
 							</p>
 							<p>
-							I have seen a lot of people who gave in and choose to love themselves more than they love their education. They tends to reject all criticism down right regardless of whether or not it actually is true or whether or not it could be beneficial. And this makes communication and working with this type of people become almost impossible.
-							</p>
-							<h4>Communication Break Down</h4>
-							<p>
-							 	There are a number of times when I really want to suggest someone a better way to do things and what they can improve on. But when I do, it turns out to be a big mess. Every little feedbacks and suggestion become a stab on their delicate and beloved self. And the next thing I know, I have become the bad guy. 
-							 </p>
-							 <p>
-							 	Working with these type of people is nearly impossible. I could never know what or when to say since what I say could potentially be intepreted wrongly and I could ended up hurting them. And I have no intention of hurting. So my solution is, "Don't bother" since they are not up for it.
-							</p>
-							<h4>You are not up for DBC.</h4>
-							<p>
-								If you are here to look always "good", "perfect", "smart" and you can't accept yourself being slightly "wrong" and "stupid" then you are just not up for DBC.
+								For example, I am asian. So I could be identified with the negative aspects, or be streotypically threathen, about being asian. Like, for example, being weak, short, stingy, and has funny ascent, and so on and so forth. Whether or not this is true, according to Claude, is doesn't matter. And in my point of view, it is not our point of interest of this article. (or a topic which anyone should be discussing about at all.) What matters here is the fact that it has been scientifically proven that <span class="redcolor">stereotype threat has a certain negative effect on the person's performance.</span>
 							</p>
 							<p>
-							Clearly, you are willing to trade your self-image at the cost of your actual growth, who are at the cost of who you could be, your reputation at the cost of your character, and your reflection of who you are at the cost of who you really are. This is not the growth mind set. It's the I-am-already-good mindset. And there is no room for growth in this kind of mindset, only denial and complacency.
-							</p>
-							<h4>Let's Grow</h4>
-							<p>
-							 Again and agian, I believe we should not lose our sight of why we are at DBC. We are here to grow techinically as well as culturally. And my only suggestion is here: <span class="redcolor">Stop liking yourself and start liking your education</span>. If you really love yourself then you want criticism. If you really love yourself then instead of instantly rejecting all criticism, start listening wholeheartedly and subjective to what others have to say. If you really love yourself, then start seeing yourself subjectively for who you really are and start accepting your short-comings. If you love yourself, dare to be wrong and look stupid because that is how you learn. Those are what you do for yourself, in and off DBC, if you really love yourself.
+								In today's world, where the internationalization of the globe has created a melting pot of cultures, stereotype threat has becomed rather common. So how should one deal with these threats? Are they really "threats"? 
 							</p>
 							<p>
-								Let's allow ourselves to grow :)
+								Here is my point of view.
+							</p>
+							<h4>1. Never expect others to understand you, always expect to understand others.</h4>
+							<P>
+								Often time we expects other people to be a certain way. We expects that everyone should be nice to one another, be culturally correct, and do everything accordingly. But the truth is, it's never like that because each person is different. We are all brought up differently; and thus think differently, wise or unwise. And as result, stereotype threat from others is something beyond one's control.
+							</P>
+							<p>
+								So don't expect others to not, or assume they should not, give you the stereotype threat because you can't. And when they do, and they will do, don't expect them to not. We all have our reasons of why we do certain things. So starts expecting from ourself to do some understanding on our part, and stop expecting others to revolve around you.
+							</p> 
+							<h4>2. It's never a threat. It's a misunderstanding.</h4>
+							<p>
+								I think the word stereotype is neutral; however, the word "threat" is rather a negative word as if someone trying to hurt someone. And I believe stereotype threat are not really threat. They are merely generalization which has nothing to do with reality.
+							</p>
+							<p>
+								A great Theravada Buddhist monk named "Buddhadasa" once said, "If the insult is not true, then you have nothing to be angry about. However, if the insult is true, then you also don't have to be angry because it is true." So whichever way you see it, it's never a threat unless you allow it to be.
+							</p>
+							<h4>3. Truth and what people think is truth is completely exclusive from one another.</h4>
+							<p>
+								Don't let the fact mix with the fiction. People can think. Let them think. People will judge. Let them judge. People will badmouth you behind your back. Let them have it. But do any of those ever tells anything about who you really are?
+							</p>
+							<p>
+								Of course not! These are just what people say. And what people say and who you are is completely different. People can say you are lazy. But if you know you work hard everday. Why bother?
+							</p>
+							<h4>Conclusion</h4>
+							<p>
+								Personally, I do not like the term "stereotype threat." It makes you feel as if someone is hurting another when they really are not. People is flawed by design and misunderstanding and stereotyping is just part of life. But what matters most in the end is to know yourself unbiased for who you really are. That way, one could find shelter in facts from the storm of fictions, truth from the what anyone thinks is truth, and ultimately, find peace amidst the uncertainty of life.
 							</p>
 						</article>
 					</div>
