--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 					<li><a href="blog-posts/week4_cultural.html">Privacy is Dead</a></li>
 					<li><a href="blog-posts/week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
 					<li><a href="blog-posts/week5_technical.html">Class in Ruby, Simplified</a></li>
+					<li><a href="blog-posts/week6_technical.html">Variables Scope in Ruby</a></li>
+					<li><a href="blog-posts/week6_cultural.html">Stereotype Threat, Not!</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
